<resources>

    <string name="app_name">FinalProject</string>
    <string name="ticket_master_name">Ticket Master Event Search</string>
    <string name="search_events_title">Search Events</string>
    <string name="saved_events_title">Saved Events</string>
    <string name="enter_city_hint">Enter City Name</string>
    <string name="no_events_found_msg">No Events Found</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="event_details">Event Details</string>
    <string name="help_title">Help</string>
    <string name="dismiss">dismiss</string>
    <string name="help_search">To search for events at a city, click on the periscope\n\nTo view saved events, click on the star\n\nTo view an event detail, click on the event from the list</string>
    <string name="help_saved">Saved events page lists all events that have been saved to your phone.\n\n  To view the event details click on the event from the list</string>


    <string name="CovidButton"> Go To Covid</string>
    <string name="TicketMasterButton">Go to TicketMaster</string>
    <string name="AudioButton">Go to Audio</string>
    <string name="Recipebutton">Go to Recipe Search</string>


    <string name="c19_geo_navigation_drawer_open">Open Drawer</string>
    <string name="c19_geo_navigation_drawer_close">Close Drawer</string>
    <string name="c19_name">YOUR_NAME</string>
    <string name="c19_country">Country: </string>
    <string name="c19_country_code">Country Code: </string>
    <string name="c19_province">Province: </string>
    <string name="c19_city">City: </string>
    <string name="c19_city_code">City Code: </string>
    <string name="c19_latitude">Latitude: </string>
    <string name="c19_longitude">Longitude: </string>
    <string name="c19_cases">Cases: </string>
    <string name="c19_status">Status: </string>
    <string name="c19_date">Date: </string>
    <string name="c19_covid_19_case_data">COVID-19 Case Data</string>
    <string name="c19_version_1">version 1</string>
    <string name="c19_position">Position: </string>
    <string name="c19_ok">Ok</string>
    <string name="c19_write_country_name_here">Write country name here</string>
    <string name="c19_start_date_yyyy_mm_dd">Start date : yyyy-mm-dd</string>
    <string name="c19_end_date_yyyy_mm_dd">End date : yyyy-mm-dd</string>
    <string name="c19_find_number_of_covid_19_cases">Find number of Covid-19 cases</string>
    <string name="c19_show_saved_data">Show Saved Data</string>

    <string name="title">This is title</string>
    <string name="Ingredients">This is Ingredients</string>
    <string name="link">This is link</string>
    <string name="ReceipeSearchPage">Receipe Search Page</string>
    <string name="address_title">Address title</string>
    <string name="language">Language</string>
    <string name="help">The user can enter the name of a recipe to search. The server returns a list of recipes that match the search terms.
        You should just show the Titles of the recipe in a list. If the user selects one of the recipes,
        there should be a details page which shows the Title, ingredients and URL to that recipe.
        Clicking on that URL should launch a browser that loads that URL. There should also be a Save button to save
        the recipe details on the device.</string>
    <string name="instruction">Instructions- </string>


</resources>